# FloppyChallenge

./: .gitignore  CNAME  LICENCE  README.md
docs/: CNAME  index.html  style.css
floppies/: create_new_floppy.py
floppies/ant_farm/: README.md
floppies/chip-8-emu/: .gitignore  CMakeLists.txt  README.md
floppies/chip-8-emu/promo/: Label.xcf  readme.txt
floppies/chip-8-emu/source/: CMakeLists.txt  main.c
floppies/chip-8-emu/test_roms/: README.md  test.xml
floppies/chip-8-emu/tests/: CMakeLists.txt  main.c
floppies/chip-8-emu/tests/suites/: add.c  binary_blob_suite.c  emulator_suite.c  file_system_suite.c  frame_buffer_suite.c  render_context_suite.c  system_suite.c
floppies/l-system-generator/: CMakeLists.txt  README.md
floppies/l-system-generator/data/: algae.json
floppies/l-system-generator/promo/: Label.xcf
floppies/l-system-generator/source/: CMakeLists.txt  main.c
floppies/l-system-generator/tests/: CMakeLists.txt  main.c
floppies/l-system-generator/tests/suites/: test_canvas.c  test_generator.c  test_loader.c  test_point.c  test_rule.c  test_symbol.c  test_system.c  test_turtle.c
floppies/lindengen/: README.md
floppies/lindengen/cmake/: FindCheck.cmake  FindValgrind.cmake
floppies/lindengen/data/: algae.json  sierpinski.json
floppies/lindengen/promo/: Label.xcf
floppies/lindengen/promo/examples/: algae.json  dragon_curve.json  koch_curve.json  sierpinski.json
floppies/lindengen/source/: main.c
floppies/lindengen/tests/: main.c
floppies/lindengen/tests/suites/: test_bounds.c  test_canvas.c  test_colour.c  test_generator.c  (+6 more)
floppies/template/: CMakeLists.txt  README.md
floppies/template/promo/: Label.xcf
floppies/template/source/: CMakeLists.txt
floppies/template/tests/: CMakeLists.txt  main.c
floppies/text-adventure/: CMakeLists.txt  README.md
floppies/text-adventure/data/: game_data.json
floppies/text-adventure/design/: Map.drawio
floppies/text-adventure/editor/: code.js  index.html  style.css
floppies/text-adventure/promo/: Label.xcf  readme.txt
floppies/text-adventure/source/: CMakeLists.txt  main.c
floppies/text-adventure/tests/: CMakeLists.txt  main.c
floppies/text-adventure/tests/suites/: door_list_suite.c  door_suite.c  entity_suite.c  item_suite.c  memory_suite.c  parser_suite.c  player_suite.c  room_suite.c  string_ops_suite.c  text_generator_suite.c  token_suite.c
floppies/text-adventure/tests/test_data/: game_data.json
